--- a/map1.html
+++ b/map1.html
@@ -18,7 +18,7 @@ window.onload = function() {  //最初の表示
 	map.setZoom(16)   //ズームレベル 4(全国) ➔ 16(拡大)に変える
 	map.panTo([ 35.631414,140.138542 ]) // 千葉 原町スリバチ集落
 	
-	map.addIcon(35.631414,140.138542,"原町スリバチ集落"
+	map.addIcon(35.631414,140.138542,"原町スリバチ集落")
 }
 
 </script>
