--- a/map1.html
+++ b/map1.html
@@ -19,6 +19,8 @@ window.onload = function() {  //最初の表示
 	map.panTo([ 35.631414,140.138542 ]) // 千葉 原町スリバチ集落
 	
 	map.addIcon(35.631414,140.138542,"原町スリバチ集落")
+	
+	map.on('click', (c) => alert(e.latlng))
 }
 
 </script>
