--- a/map1.html
+++ b/map1.html
@@ -20,7 +20,7 @@ window.onload = function() {  //最初の表示
 	
 	map.addIcon(35.631414,140.138542,"原町スリバチ集落")
 	
-	map.on('click', (c) => alert(e.latlng))
+	map.on("click", (e) => alert(e.latlng))
 }
 
 </script>
