--- a/map1.html
+++ b/map1.html
@@ -19,8 +19,10 @@ window.onload = function() {  //最初の表示
 	map.panTo([ 35.631414,140.138542 ]) // 千葉 原町スリバチ集落
 	
 	map.addIcon(35.631414,140.138542,"原町スリバチ集落")
+	map.addIcon(35.628406, 140.152276,"山田うどん","icon/udon.png",100)
 	
 	map.on("click", (e) => alert(e.latlng))
+	
 }
 
 </script>
