--- a/map1.html
+++ b/map1.html
@@ -16,7 +16,7 @@
 window.onload = function() {  //最初の表示
 	var map = initMap('mapid')
 	map.setZoom(16)   //ズームレベル 4(全国) ➔ 16(拡大)に変える
-	map.panTo([ 35.631414,140.138542 ]) // 千葉 原町スリバチ集落
+	map.panTo([ 35.630387, 140.139577 ]) // 表示の中心
 	
 	map.addIcon(35.631414,140.138542,"原町スリバチ集落","icon/suribachi.png",70)
 	map.addIcon(35.628406,140.152276,"山田うどん","icon/udon.png",70)
