--- a/map1.html
+++ b/map1.html
@@ -24,6 +24,27 @@ window.onload = function() {  //最初の表示
 	
 	map.on("click", (e) => alert(e.latlng))
 	
+	// SPARQLクエリー
+	var query = `
+		prefix ic: <http://imi.go.jp/ns/core/rdf#>
+		prefix xsd: <http://www.w3.org/2001/XMLSchema#>
+		select ?uri ?name ?lat ?lng {
+			?uri ic:名称 [ ic:表記 ?name ].
+			?uri ic:地理座標 [ ic:緯度 ?lat; ic:経度 ?lng; ].
+			filter(contains(str(?name),'鯖江'))
+		} limit 100
+	`
+
+	querySPARQL(query, function(data) {
+		var items = data.results.bindings
+		for (var i = 0; i < items.length; i++) {
+			var item = items[i]
+			var lat = item.lat.value
+			var lng = item.lng.value
+			var name = item.name.value
+			map.addIcon(lat, lng, name)
+		}
+	})
 }
 
 </script>
